--- a/pango-sys/Cargo.toml
+++ b/pango-sys/Cargo.toml
@@ -4,8 +4,14 @@ pkg-config = "0.3.7"
 [dependencies]
 bitflags = "0.4"
 libc = "0.2"
-glib-sys = "^0.3.3"
-gobject-sys = "^0.3.3"
+
+[dependencies.glib-sys]
+path = "../glib-sys"
+version = "0.3.2"
+
+[dependencies.gobject-sys]
+path = "../gobject-sys"
+version = "0.3.2"
 
 [features]
 v1_31 = []
@@ -29,4 +35,4 @@ license = "MIT"
 links = "pango"
 name = "pango-sys"
 repository = "https://github.com/gtk-rs/sys"
-version = "0.3.3"
+version = "0.3.2"
