sys: Update crate version and name to match the existing one

--- a/pango-cairo-sys/Cargo.toml
+++ b/pango-cairo-sys/Cargo.toml
@@ -26,5 +26,5 @@ name = "pango_cairo_sys"
 [package]
 build = "build.rs"
 links = "pango_cairo"
-name = "pango-cairo-sys"
-version = "0.2.0"
+name = "pangocairo-sys"
+version = "0.4.1"
