sys: Add missing fields in Cargo file

--- a/pangocairo-sys/Cargo.toml
+++ b/pangocairo-sys/Cargo.toml
@@ -24,7 +24,12 @@ dox = []
 name = "pango_cairo_sys"
 
 [package]
+authors = ["The Gtk-rs Project Developers"]
 build = "build.rs"
+description = "FFI bindings to libgtk-3"
+homepage = "http://gtk-rs.org/"
+keywords = ["gtk", "ffi", "gtk-rs", "gnome"]
 links = "pango_cairo"
 name = "pangocairo-sys"
 version = "0.4.1"
+repository = "https://github.com/gtk-rs/sys"
