sys: Add license

--- a/pangocairo-sys/Cargo.toml
+++ b/pangocairo-sys/Cargo.toml
@@ -26,6 +26,7 @@ name = "pango_cairo_sys"
 [package]
 authors = ["The Gtk-rs Project Developers"]
 build = "build.rs"
+license = "MIT"
 description = "FFI bindings to libgtk-3"
 homepage = "http://gtk-rs.org/"
 keywords = ["gtk", "ffi", "gtk-rs", "gnome"]
