--- a/conf/gir-pangocairo.toml
+++ b/conf/gir-pangocairo.toml
@@ -3,6 +3,8 @@ work_mode = "sys"
 library = "PangoCairo"
 version = "1.0"
 min_cfg_version = "1.30"
+single_version_file = "."
+
 external_libraries = [
     "GLib",
     "Pango",
