--- a/gio-sys/Cargo.toml
+++ b/gio-sys/Cargo.toml
@@ -4,8 +4,11 @@ pkg-config = "0.3.7"
 [dependencies]
 libc = "0.2"
 
-glib-sys = { path = "../glib-sys" }
-gobject-sys = { path = "../gobject-sys" }
+[dependencies.glib-sys]
+path = "../glib-sys"
+
+[dependencies.gobject-sys]
+path = "../gobject-sys"
 
 [dev-dependencies]
 shell-words = "0.1.0"
