--- a/pango-sys/Cargo.toml
+++ b/pango-sys/Cargo.toml
@@ -34,3 +34,6 @@ links = "pango"
 name = "pango-sys"
 repository = "https://github.com/gtk-rs/sys"
 version = "0.9.0"
+
+["package.metadata.docs.rs"]
+features = ["dox", "v1_42"]
