--- a/pangocairo-sys/Cargo.toml
+++ b/pangocairo-sys/Cargo.toml
@@ -34,6 +34,5 @@ links = "pango_cairo"
 name = "pangocairo-sys"
 repository = "https://github.com/gtk-rs/sys"
 version = "0.10.0"
-
-["package.metadata.docs.rs"]
+[package.metadata.docs.rs]
 features = ["dox"]
